# thome

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRD.MD  README.md  REPORT.MD  REQUIREMENTS.MD  docker-compose.yml  pyproject.toml
.github/workflows/: validate.yml
app/: __init__.py  config.py  database.py  logging_config.py  main.py
app/auth/: dependencies.py  jwt.py
app/middleware/: __init__.py  error_handler.py  request_id.py
app/models/: __init__.py  account.py  card.py  statement.py  transaction.py  user.py
app/routers/: accounts.py  auth.py  cards.py  health.py  holders.py  statements.py  transfers.py
app/schemas/: account.py  auth.py  card.py  statement.py  transaction.py
app/services/: account_service.py  auth_service.py  card_service.py  statement_service.py  transfer_service.py
docs/: AI_USAGE.md  INDEX.md
docs/logs/: browser-audit.md
scripts/: benchmark.py  record_demo.py  seed_data.py  test_client.py
static/: index.html
tests/: conftest.py  test_auth.py  test_backend_audit.py  test_cards.py  test_e2e_scenarios.py  test_final_audit.py  test_health.py  test_holders_accounts.py  test_logging_and_health.py  test_middleware.py  test_playwright.py  test_statements.py  test_stress.py  test_transfers.py
